# tuohi

./: .ghci  .gitignore  Application.hs  Database.hs  Datepicker.hs  DivisionMessages.hs  Email.hs  Error.hs  Foundation.hs  Helpers.hs  Import.hs  Model.hs  Permission.hs  README.md  Repeat.hs  Settings.hs  client_session_key.aes  devel.hs  handicap.sql  run-devel.sh  stack.yaml  test.hs  weeklyapp.cabal
Competition/: Competition.hs  Groups.hs  Handicap.hs
Handler/: AddPenalty.hs  AddPlayer.hs  Admin.hs  ChangeGroup.hs  Competition.hs  CompetitionAuth.hs  CompetitionEventLog.hs  CompetitionState.hs  Course.hs  Courses.hs  Division.hs  EditCompetition.hs  EventLog.hs  ExportScores.hs  FinishedCompetitions.hs  Forms.hs  Groups.hs  Handicaps.hs  Home.hs  ImportPlayers.hs  Info.hs  Input.hs  Language.hs  Layout.hs  NewCompetition.hs  Notifications.hs  Permissions.hs  Profile.hs  Results.hs  RoundState.hs  Scores.hs  Series.hs  SignUp.hs  TempAuth.hs  Test.hs  User.hs  Users.hs
Model/: CompetitionEventLog.hs  CompetitionState.hs  EventLog.hs  Permission.hs  Round.hs  RoundState.hs  User.hs
Yesod/Form/I18n/: Finnish.hs
app/: DevelMain.hs  devel.hs  main.hs
config/: keter.yml  models  routes  settings.yml  sqlite.yml  test-settings.yml
deploy/: Procfile
messages/: en.msg  fi.msg
static/css/: jquery.mobile.datepicker.css
static/js/: bootstrap-datepicker.js  bootstrap4.js  jquery.mobile.datepicker.js
templates/: addplayer.hamlet  addplayer.julius  admin.hamlet  competition-eventlog.hamlet  competitionauth.hamlet  competitioninit.hamlet  course.hamlet  courses.hamlet  datepicker.julius  default-layout-wrapper.hamlet  default-layout.hamlet  editcompetition.hamlet  event-log.hamlet  export-scores.hamlet  finished-competitions.hamlet  finished.hamlet  groups.hamlet  handicaps.hamlet  header.hamlet  home.hamlet  home.julius  import-players.hamlet  init.julius  input-scores.julius  input.hamlet  input.julius  language.hamlet  layout.hamlet  live.hamlet  live.julius  message.hamlet  mobileinit.julius  newcompetition.hamlet  newcompetition.julius  notifications.hamlet  notifications.julius  permissions.hamlet  profile.hamlet  results.hamlet  score-edit-players.hamlet  (+19 more)
test/: TestImport.hs
test/Handler/: CompetitionEventLogSpec.hs
