name:              weeklyapp
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Profile
                     Handler.Admin
                     Handler.Notifications
                     Handler.NewCompetition
                     Handler.Competition
                     Handler.Layout
                     Handler.SignUp
                     Handler.Series
                     Handler.TempAuth
                     Handler.Scores
                     Handler.Groups
                     Handler.Input
                     Handler.Courses
                     Handler.Course
                     Handler.User
                     Handler.Users
                     Handler.Forms
                     Handler.CompetitionState
                     Handler.RoundState
                     Handler.Division
                     Handler.Language
                     Handler.Results
                     Handler.Info
                     Handler.AddPlayer
                     Helpers
                     Database
                     Competition.Competition
                     Competition.Groups
                     Competition.Handicap
                     DivisionMessages

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.7.2    && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.1.1.4    && < 2.2
                 , persistent-sqlite             >= 2.0        && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , warp-tls                      >= 3.0.1.3    && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , time                          >= 1.4        && < 1.5
                 , esqueleto                     >= 2.1.1      && < 2.2
                 , mime-mail                     >= 0.4.6      && < 0.5
                 , blaze-html                    >= 0.7.0.3    && < 0.8
                 , foreign-store                 >= 0.1

    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         weeklyapp
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app, Competition
    build-depends:     base
                     , weeklyapp
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    build-depends: base
                 , weeklyapp
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
